# app_rkipc

./: CMakeLists.txt  Rockchip_Developer_Guide_Linux_RKIPC_CN.md
cmake/: Version.cmake
common/: common.c  common.h
common/audio/rk3588/: audio.c
common/audio/rv1106/: audio.c
common/audio/rv1126/: audio.c
common/event/: event.c
common/isp/: isp.c
common/isp/otter/: isp.c  isp.h
common/isp/rk3576/: isp.c
common/isp/rk3588/: isp.c  isp.h
common/isp/rv1103b/: isp.c
common/isp/rv1106/: isp.c  isp.h
common/isp/rv1126/: fake_isp.c  fake_isp.h  isp.c  isp.h
common/isp2/: isp.c  isp.h
common/ivm/: event.c
common/network/: Rk_wifi.c  gbk_to_utf8.c  network.c  utf8_to_gbk.c  utility.c
common/osd/: bmp_reader.c  bmp_reader.h  color_table.c  font_factory.c  osd.c  osd.h  osd_common.h
common/param/: param.c
common/region_clip/: region_clip.c
common/rockiva/: rockiva.c  rockiva.h  rockiva_ba_api.h  rockiva_common.h  rockiva_det_api.h  rockiva_face_api.h  rockiva_image.h
common/roi/: roi.c
common/rtmp/: rtmp.c
common/socket_server/: server.c
common/storage/: storage.c  storage.h
common/system/: system.c  system.h
common/tuya_ipc/: tuya_ipc.c  tuya_ipc.h
common/tuya_ipc/5.5.29/: tuya_ipc.c  tuya_ipc.h  tuya_ipc_stream_storage_demo.c  tuya_ipc_wifi_demo.c  tuya_ipc_wired_demo.c
common/tuya_ipc/include/: tuya_ipc_api.h  tuya_ipc_p2p.h
common/venc/: venc.c
common/vendor_storage/: vendor_storage.c
docs/: Rockchip_Developer_Guide_Linux_RKIPC_CN.md  Rockchip_Developer_Guide_Linux_RKIPC_EN.md
lib/aarch64-rockchip1031-linux-gnu/: libfreetype.so.6  libpng16.so.16
lib/arm-rockchip830-linux-gnueabihf/: libfreetype.so.6
lib/arm-rockchip830-linux-uclibcgnueabihf/: libiconv.so.2
src/low_memory_ipc/: CMakeLists.txt  main.c  rkipc.ini
src/low_memory_ipc/audio/: audio.c  audio.h
src/low_memory_ipc/server/: server.c
src/low_memory_ipc/video/: video.c  video.h
src/rk3576_ipc/: CMakeLists.txt  RkLunch.sh  main.c  rkipc-aiisp-400w.ini  rkipc.ini
src/rk3576_ipc/video/: video.c  video.h
src/rk3576_multi_ipc/: CMakeLists.txt  RkLunch.sh  main.c  rkipc-3x.ini
src/rk3576_multi_ipc/video/: video.c  video.h
src/rk3588_ipc/: CMakeLists.txt  RkLunch.sh  main.c  rkipc.ini
src/rk3588_ipc/audio/: audio.c
src/rk3588_ipc/server/: server.c
src/rk3588_ipc/video/: video.c  video.h
src/rk3588_multi_ipc/: CMakeLists.txt  RkLunch.sh  main.c  rkipc-4x.ini  rkipc-6x-no-blend-hor.ini  rkipc-6x.ini  rkipc-8x.ini  rkipc.ini
src/rk3588_multi_ipc/audio/: audio.c
src/rk3588_multi_ipc/server/: server.c
src/rk3588_multi_ipc/video/: video.c  video.h
src/rv1103_ipc/: CMakeLists.txt  RkLunch.sh  main.c  rkipc-1920x1080-rv1103b.ini  rkipc-1920x1080.ini  rkipc-200w-rv1103b.ini  rkipc-200w.ini  rkipc-2304x1296-rv1103b.ini  rkipc-2304x1296.ini  rkipc-2560x1440-rv1103b.ini  rkipc-2560x1440.ini  rkipc-2688x1520-rv1103b.ini  rkipc-2688x1520.ini  rkipc-2880x1616-rv1103b.ini  rkipc-2880x1616.ini  rkipc-300w-rv1103b.ini  rkipc-300w.ini  rkipc-400w-rv1103b.ini  rkipc-400w.ini  rkipc-500w-rv1103b.ini  rkipc-500w.ini
src/rv1103_ipc/audio/: audio.c
src/rv1103_ipc/video/: video.c  video.h
src/rv1106_aiisp_ipc/: CMakeLists.txt  RkLunch.sh  rkipc-1920x1080-rv1103b.ini  rkipc-1920x1080.ini  rkipc-2560x1440-rv1103b.ini  rkipc-2560x1440.ini  rkipc-2688x1520-rv1103b.ini  rkipc-2688x1520.ini  rkipc-400w.ini
src/rv1106_aiisp_ipc/video/: video.c
src/rv1106_battery_ipc/: CMakeLists.txt  main.c  rkipc.ini
src/rv1106_battery_ipc/audio/: audio.c
src/rv1106_battery_ipc/video/: video.c  video.h
src/rv1106_battery_ipc_client/: CMakeLists.txt  main.c  rkipc-300w.ini  rkipc-400w.ini  rkipc-500w.ini
src/rv1106_battery_ipc_client/audio/: audio.c
src/rv1106_battery_ipc_client/video/: video.c  video.h
src/rv1106_battery_ipc_tuya/: CMakeLists.txt  main.c  rkipc.ini
src/rv1106_battery_ipc_tuya/audio/: audio.c
src/rv1106_battery_ipc_tuya/video/: video.c
src/rv1106_dual_ipc/: CMakeLists.txt  RkLunch.sh  main.c  rkipc-dual-200w-rv1103b.ini  rkipc-dual-200w.ini  rkipc-no-blend.ini  rkipc-rv1103b.ini  rkipc.ini
src/rv1106_dual_ipc/audio/: audio.c
src/rv1106_dual_ipc/video/: video.c
src/rv1106_ipc/: CMakeLists.txt  RkLunch-stop.sh  RkLunch.sh  main.c  rkipc-1920x1080-rv1103b.ini  rkipc-1920x1080.ini  rkipc-200w-rv1103b.ini  rkipc-200w.ini  rkipc-2304x1296-rv1103b.ini  rkipc-2304x1296.ini  rkipc-2560x1440-rv1103b.ini  rkipc-2560x1440.ini  rkipc-2688x1520-rv1103b.ini  rkipc-2688x1520.ini  rkipc-2880x1616-rv1103b.ini  rkipc-2880x1616.ini  rkipc-300w-rv1103b.ini  rkipc-300w.ini  rkipc-3840x2160-rv1103b.ini  rkipc-3840x2160.ini  rkipc-400w-rv1103b.ini  rkipc-400w.ini  rkipc-500w-rv1103b.ini  rkipc-500w.ini  rkipc-800w-rv1103b.ini  rkipc-800w.ini  rkipc.ini
src/rv1106_ipc/audio/: audio.c  audio.h
src/rv1106_ipc/server/: server.c
src/rv1106_ipc/video/: video.c  video.h
src/rv1106_v4l2_drm/: CMakeLists.txt  RkLunch.sh
src/rv1106_wakeup_ipc/: CMakeLists.txt  main.c  rkipc-300w.ini  rkipc-400w.ini  rkipc-500w.ini
src/rv1106_wakeup_ipc/video/: video.c
src/rv1126_aiisp_ipc/: CMakeLists.txt  RkLunch.sh  rkipc-imx415.ini  rkipc-os04a10.ini
src/rv1126_aiisp_ipc/audio/: audio.c
src/rv1126_aiisp_ipc/video/: video.c
src/rv1126_battery_ipc/: CMakeLists.txt  main.c  rkipc.ini
src/rv1126_battery_ipc/audio/: audio.c
src/rv1126_battery_ipc/video/: video.c
src/rv1126_dual_ipc/: CMakeLists.txt  main.c  rkipc-no-blend.ini  rkipc.ini
src/rv1126_dual_ipc/video/: video.c  video.h
src/rv1126_ipc/: CMakeLists.txt  RkLunch.sh  main.c  rkipc.ini
src/rv1126_ipc/audio/: audio.c
src/rv1126_ipc/server/: server.h
src/rv1126_ipc/video/: video.c
src/rv1126_ipc_rkmedia/: CMakeLists.txt  RkLunch.sh  main.c  rkipc-imx335.ini  rkipc-imx415.ini  rkipc-os04a10.ini  rkipc.ini
src/rv1126_ipc_rkmedia/audio/: audio.c
src/rv1126_ipc_rkmedia/server/: server.c
src/rv1126_ipc_rockit/: CMakeLists.txt  RkLunch.sh  main.c  rkipc-imx335.ini  rkipc-imx415.ini  rkipc-os04a10.ini  rkipc-ov2718.ini  rkipc.ini
src/rv1126_snapshot/: CMakeLists.txt
(+48 files in other folders)
